@@ -10,6 +10,8 @@
    - Handled pipe errors and added tests (margaretha)
 19/12/2019
    - Updated create update user-group API (margaretha)
+20/12/2019
+   - Removed transactional annotations from simple select queries (margaretha)   
     
 # version 0.62.2
 17/10/2019
